src/objects/WGUCompletionTaskInCourseVersion__c.object
<CustomObject>
    <description>The many to many relationship table for WGU Course Completion Task to WGU Course Version</description>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAMSAssessmentCourseVersionId__c</fullName>
        <description>The unique ID that will associate this record with a record in PAMS. assessment_id -course_version_id</description>
        <externalId>true</externalId>
        <label>PAMS Assessment Course Version Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAMSAssessmentId__c</fullName>
        <description>The id of the Assessment from PAMS.  Used to create the lookup to WGUCourseCompletionTask__c</description>
        <label>PAMS Assessment Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAMSCourseVersionId__c</fullName>
        <description>The external id for the course version.  Used for create the lookup to WGUCourseVersion__c</description>
        <label>PAMS Course Version Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WGUCourseCompletionTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The WGUCourseCompletion task associated with this mapping</description>
        <label>WGU Course Completion Task</label>
        <referenceTo>WGUCourseCompletionTask__c</referenceTo>
        <relationshipLabel>WGU Completion Task in Course Version</relationshipLabel>
        <relationshipName>WGUCompletionTaskInCourseVersion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WGUCourseVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The WGUCourseVersion associated with this mapping</description>
        <label>WGU Course Version</label>
        <referenceTo>WGUCourseVersion__c</referenceTo>
        <relationshipLabel>WGU Completion Task in Course Version</relationshipLabel>
        <relationshipName>WGUCompletionTaskInCourseVersion</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WGU Completion Task in Course Version</label>
    <nameField>
        <label>WGU Completion Task in Course Version Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WGU Completion Task in Course Version</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>